--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
 
   <div class="header-container">
-    <div class="burger" onClick={this.clicked}>
+    <div class="burger" onclick="clicked()">
       <div class="line1"></div>
       <div class="line2"></div>
       <div class="line3"></div>
@@ -21,7 +21,7 @@
     <ul class="nav-links">
       <li><a href="mailto: andrewvadeika@gmail.com">Contact</a></li>
       <li><a href="https://github.com/andrewv517">My Work</a></li>
-      <a href={resume} target="_blank"><button>Resume</button></a>
+      <a href="images/resume.pdf" target="_blank"><button>Resume</button></a>
     </ul>
 
   </div>
